[workspace]
members = [
    "a_standard",
    "chapt10_trait",
    "chapt11_test",
    "chapt12_io_item",
    "chapt13_closures_iterators",
    "chapt1_hello_world",
    "chapt2_guessing_game",
    "chapt3_variables",
    "chapt4_ownership",
    "chapt5_struct",
    "chapt6_enum_match",
    "chapt7_crate",
    "chapt8_collections",
    "chapt9_error",
]

resolver = "1"
