[workspace]
members = [
    "a_standard",
    "chapt10_trait",
    "chapt11_test",
    "chapt12_io_item",
    "chapt13_closures_iterators", "chapt14_cargo", "chapt15_smart_pointer", "chapt16_concurrent_program",
    "chapt1_hello_world",
    "chapt2_guessing_game",
    "chapt3_variables",
    "chapt4_ownership",
    "chapt5_struct",
    "chapt6_enum_match",
    "chapt7_crate",
    "chapt8_collections",
    "chapt9_error",
]

resolver = "1"


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
